<resources>
    <string name="app_name">Tiiight</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="edit_reminder_hint">Remind me on %1$s</string>
    <string name="undo">Undo</string>
    <string name="today">Today</string>
    <string name="later_today">Later today</string>
    <string name="this_week">This week</string>
    <string name="later">Later</string>
    <string name="custom">Custom</string>
    <string name="edit_reminder">Edit reminder</string>
    <string name="send_feedback">Send feedback</string>
    <string name="archived_notes">Archived notes</string>
    <string name="archive">Archive</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="reminder_time_in_one_hour">In 1 hour</string>
    <string name="reminder_time_tonight">Tonight</string>
    <string name="reminder_time_tomorrow">Tomorrow</string>
    <string name="reminder_time_tomorrow_night">Tomorrow night</string>
    <string name="reminder_time_in_2_days">In 2 days</string>
    <string name="reminder_time_next_weekend">Next weekend</string>
    <string name="reminder_time_next_monday">Next Monday</string>
    <string name="reminder_time_last">Last</string>
    <string name="tiiight_notifications">Tiiight Notifications</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="add_reminder">Add reminder</string>
    <string name="reminder_time_in_the_morning">In the morning</string>
    <string name="marked_done">Marked done</string>
    <string name="share_to">Share to</string>
    <string name="next_week">Next week</string>
    <string name="in_the_past">In the past</string>
    <string name="unarchived">Unarchived</string>
    <string name="night_mode">Night mode</string>
    <string name="done">Done</string>
    <string name="snooze">Snooze</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="new_reminder">New reminder</string>
    <string name="snoozed_until">Snoozed until %1$s</string>
    <string name="snooze_denied">Snooze denied. Try again.</string>
</resources>
